[package]
name = "pagefind"
version = "0.0.0"
edition = "2021"
include = ["/src", "/vendor", "/features", "/tests"]
description = "Implement search on any static website."
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "3.2.6", features = ["derive"] }
console = "0.15.1"
wax = "0.5.0"
futures = "0.3"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "fs",
    "time",
    "macros",
] }
pagefind_stem = { version = "0.2.0", features = [
    "arabic",
    "armenian",
    "basque",
    "catalan",
    "danish",
    "dutch",
    "english",
    "finnish",
    "french",
    "german",
    "greek",
    "hindi",
    "hungarian",
    "indonesian",
    "irish",
    "italian",
    "lithuanian",
    "nepali",
    "norwegian",
    "portuguese",
    "romanian",
    "russian",
    "serbian",
    "spanish",
    "swedish",
    "tamil",
    "turkish",
    "yiddish",
] }
charabia = { version = "0.6.0", optional = true }
hashbrown = { version = "0.12.0", features = ["serde"] }
regex = "1.1"
minicbor = { version = "0.18.0", features = ["alloc", "derive"] }
lol_html = "0.3"
html-escape = "0.2.11"
bit-set = "0.5"
flate2 = "1.0"
minifier = "0.2.2"
sha-1 = "0.10"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
lazy_static = "1.4.0"
include_dir = "0.7.2"
twelf = { version = "0.7", default-features = false, features = [
    "env",
    "clap",
    "json",
    "yaml",
    "toml",
] }
portpicker = "0.1"
actix-web = "4"
actix-files = "0.6"
lexical-core = "0.8.5"

[features]

extended = ["dep:charabia"]
