[package]
name = "pagefind_native_search"
version = "0.1.0"
edition = "2021"
authors = ["CloudCannon"]
description = "Native search capabilities for Pagefind - file system based search implementation"
license = "MIT"

[dependencies]
pagefind_core_search = { path = "../pagefind_core_search" }
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.0"

[[bin]]
name = "pagefind-search"
path = "src/main.rs"

[lib]
name = "pagefind_native_search"
path = "src/lib.rs"

[features]
default = []