[package]
name = "pagefind_native_search"
version = "0.1.0"
edition = "2021"
authors = ["CloudCannon"]
description = "Native search capabilities for Pagefind - file system based search implementation"
license = "MIT"

[dependencies]
pagefind_core_search = { path = "../pagefind_core_search" }
pagefind_stem = { path = "../pagefind_stem" }
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
bit-set = "0.5"
minicbor = "0.20.0"
twelf = { version = "0.11", default-features = false, features = [
    "env",
    "clap",
    "json",
    "yaml",
    "toml",
] }

[dev-dependencies]
tempfile = "3.0"

[[bin]]
name = "pagefind-search"
path = "src/main.rs"

[lib]
name = "pagefind_native_search"
path = "src/lib.rs"

[features]
default = []