[package]
name = "pagefind_stem"
version = "0.2.0"
# Imports would have to change for a newer edition,
# and I don't want to have to edit snowball's rust files
edition = "2015"
description = "Snowball stemming algorithms repackaged for Rust, with languages behind feature flags."
license = "MIT"

[dependencies]

[features]
arabic = []
armenian = []
basque = []
catalan = []
danish = []
dutch = []
english = []
finnish = []
french = []
german = []
german2 = []
greek = []
hindi = []
hungarian = []
indonesian = []
irish = []
italian = []
kraaij_pohlmann = []
lithuanian = []
lovins = []
nepali = []
norwegian = []
porter = []
portuguese = []
romanian = []
russian = []
serbian = []
spanish = []
swedish = []
tamil = []
turkish = []
yiddish = []
