[tool.poetry]
name = "pagefind_python"
version = "0.0.0a0"
# note that ^this^ is the version number of the python API, not the version of
# the pagefind executable.
description = "Python API for Pagefind"
authors = ["CloudCannon"]
license = "MIT"
readme = "README.md"
include = []
exclude = [
    "dist",
    "output",
    "*.whl",
    "*.egg-info",
    "*.log",
    ".venv",
    "pagefind_python_bin"
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Text Processing :: Markup :: HTML",
]

# Note: we *aren't* including an `entry-points` section here to avoid clobbering
# the user's natively-installed `pagefind` binary. Using `python3 -m pagefind_python`
# is an informatively-namespaced alternative that doesn't add too many keystrokes.
# See https://packaging.python.org/en/latest/specifications/entry-points/

[tool.poetry.dependencies]
python = ">=3.9"

# during the building of the pagefind_python package, the pagefind binary packages
# aren't yet published. Thus, `poetry lock` will fail if we include them here.
# However, `poetry build` fails to include the binary package extras in
# `pagefind_python`'s distribution info if these lines are commented out. Thus,
# we temporarily uncomment these lines during the build process, and then re-comment
# them afterwards

# [[[cog
#   version = open("pagefind_version.txt").read().strip()
#   print(f"# pagefind_bin = {{ version = \"~={version}\", optional = true }} #!!opt")
#   print(f"# pagefind_bin_extended = {{ version = \"~={version}\", optional = true }} #!!opt")
# ]]]
# pagefind_bin = { version = "~=1.1.0", optional = true } #!!opt
# pagefind_bin_extended = { version = "~=1.1.0", optional = true } #!!opt
# [[[end]]]

[tool.poetry.extras]
bin = ["pagefind_bin"]
extended = ["pagefind_bin_extended"]

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"
mypy = "^1.10.1"
wheel = "^0.43.0"
cogapp = "^3.4.1"
twine = "^5.1.1"
docutils = "^0.21.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
# note that poetry can currently only build `purelib`s, or pure-python wheels.
# (see https://python-poetry.org/docs/cli#build)
# This means poetry can't handle building wheels that contain pagefind's binaries,
#  which are necessarily platform-dependent.
# For more information on purelibs/pure-python wheels, see
# https://peps.python.org/pep-0427/#what-s-the-deal-with-purelib-vs-platlib
